<!--
  ~    Copyright 2018 MalgoskaG & Bwaim
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<resources>
    <string name="app_name">AwesomeApp</string>
    <string name="userAccount">Account</string>
    <string name="nick_from_slack">Nick from slack</string>
    <string name="log_out">LOG OUT</string>
    <string name="save">SAVE</string>

    <string name="welcome_message">Hello, %1$s! \n(%2$s)</string>
    <string name="your_track">Your track</string>
    <string name="language_2">Language 2</string>
    <string name="language_1">Language 1</string>
    <string name="actual_project">Actual project</string>
    <string name="and">AND</string>
    <string name="abnd">ABND</string>
    <string name="fend">FEND</string>
    <string name="mws">MWS</string>
    <string name="nobodyWorkNow">Currently no one is working on this project, but do not worry. Check out next projects and find someone who has already written it</string>
    <string name="andTrack">AND Track</string>
    <string name="abndTrack">ABND Track</string>
    <string name="fendTrack">FEND Track</string>
    <string name="mwsTrack">MWS Track</string>
    <string name="userAvatar">user avatar</string>
    <string name="testString">TextView</string>
    <string name="delete_user">Delete user</string>
    <string name="noLanguageFilter">No language filer</string>
    <string name="nothingToLoad">Nothing to load</string>
    <string name="selectTrack">Select a track</string>
    <string name="selectLanguage">Select a language</string>
    <string name="selectProject">Select a project</string>
    <string name="log_out_message_for_delete_user">for security reasons you have to log out and log in again to delete your account correctly</string>
    <string name="slack">Open slack</string>
    <string name="logoutConfirmation">are you sure that you want log out?</string>
    <string name="logout">Log out</string>
    <string name="deleteConfirmation">are you sure that you want delete your account?</string>
    <string name="deleteAccount">Delete account</string>
    <string name="verifyEmail">Verify your email</string>
    <string name="sendLink">Send me link</string>
    <string name="refresh">Refresh</string>
    <string name="undefined">undefined</string>
    <string name="dataSaved">Data saved</string>
    <string name="somethingWrong">Something wrong :( try again</string>
    <string name="userDeleted">User deleted successfully</string>
    <string name="ok">OK</string>
    <string name="chooseMessage">Choose your track and current project</string>
    <string name="waitingMessage">Wait for data loading</string>
    <string name="deadline">Deadline: </string>
    <string name="refresh_data_by_swip">Refresh data by swip</string>
    <string name="choose_your_track_first">choose your track first</string>
    <string name="data_saving">Data saving, it may take a few seconds</string>
    <string name="cancel_progressbar_info">The data will be saved in a moment, do you want to return to the main screen?</string>
    <string name="errorLoading">Error while loading data</string>
    <string name="data_are_saved_back_to_home_screen">Your data are saved, do you want to go back to the home screen?</string>
    <string name="close_app">Close app</string>
    <string name="close_app_info">do you want to turn off the application? \n(The app will still be available in the background)</string>


</resources>
