<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_layout" />

    <Spinner
        android:id="@+id/projectsSpinner"
        style="@style/userInput"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@drawable/background_frame"
        android:drawableEnd="@drawable/ic_droparrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actualProjectTxt" />

    <EditText
        android:id="@+id/slackNick"
        style="@style/userInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/mediumDp"
        android:layout_marginEnd="@dimen/smallDp"
        android:ems="10"
        android:hint="@string/nick_from_slack"
        android:inputType="textPersonName"
        android:theme="@style/MyEditTextStyle2"
        app:layout_constraintBottom_toTopOf="@+id/language1Txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/logOutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/button_bck"
        android:text="@string/log_out"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/saveBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_bck"
        android:text="@string/save"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/logOutBtn" />

    <Spinner
        android:id="@+id/lang2Spinner"
        style="@style/userInput"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/background_frame"
        app:layout_constraintBottom_toTopOf="@+id/language2Txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/lang1Spinner"
        style="@style/userInput"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/background_frame"
        app:layout_constraintBottom_toTopOf="@+id/yourTracTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/trackSpinner"
        style="@style/userInput"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/background_frame"
        app:layout_constraintBottom_toTopOf="@+id/logOutBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/actualProjectTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Actual project"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/language1Txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="Language 1"
        app:layout_constraintBottom_toTopOf="@+id/lang2Spinner"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/language2Txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="Language 2"
        app:layout_constraintBottom_toTopOf="@+id/lang1Spinner"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/yourTracTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="Your track"
        app:layout_constraintBottom_toTopOf="@+id/trackSpinner"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/testText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/projectsSpinner" />

</android.support.constraint.ConstraintLayout>